# chores-suck

./: .gitignore  CMakeLists.txt  FairMate.pro  README.md  choressuck.sql  compile_commands.json  configure  main.cpp  queries
WebServer/: auth.go  requirements.txt
WebServer/src/: auth.http
WebUI/: account.html  chores.html  households.html  index.html  login.html  profile.html  roommates.html
WebUI/js/: main.js
documentation/: .~lock.FairMateClient_Design.odt#  FairMateClient_Design.odt  FairMateServer_Design.odt  FairMate_Functionality.odt  api-requirements.txt  build_instructions.txt  database-layout.txt  database-requirements.txt  functional-description.txt  gui-requirements.txt  tasks.txt  webserver-requirements.txt
headers/: Item.h  ItemHandler.h  ItemInterface.h  ItemTime.h
html/: addrole.html  dashboard.html  editgroup.html  editrole.html  head.html  index.html  layout.html  login.html  navbar.html  newchore.html  newgroup.html  register.html  sessionNav.html  updatechore.html
html/css/: login.css  main.css
html/js/: response.js  session.js  table.js
public/css/: main.css
public/js/: main.js
server/: PassiveSocket.cpp  PassiveSocket.h  Socket.cpp  Socket.h
src/: go.mod  go.sum  main.go
src/auth/: repository.go  service.go  session.go
src/chores/: chores.go
src/core/: chores.go  groups.go  roles.go  types.go  users.go
src/rest/: handler.go
src/types/: chore.go  group.go  (+5 more)
utils/: FcnPtr.h  Thread.cpp  Thread.h
webserver/: ChoreHandler.go  GroupHandler.go  auth.go  chores_test.go  files.go  go.mod  go.sum  guitypes.go  login.go
(+104 files in other folders)
